added button with event handling regarding its text

--- a/popup.html
+++ b/popup.html
@@ -3,10 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" type="text/css" />
     <title>Hello</title>
-    <script src="popup.js"></script>
   </head>
   <body>
-    <button>START</button>
+    <div id="main_container">
+      <div id="btn_container">
+        <button id="start_timer_btn">
+          <span id="btn_text">
+            START
+          </span>
+        </button>
+      </div>
+      <div id="timer_container">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+    </div>
+    <script src="popup.js"></script>
   </body>
 </html>
