--- a/popup.html
+++ b/popup.html
@@ -16,9 +16,9 @@
         </button>
       </div>
       <div id="timer_container">
-        <span></span>
-        <span></span>
-        <span></span>
+        <span>00</span>
+        <span>:</span>
+        <span>00</span>
       </div>
     </div>
     <script src="popup.js"></script>
