--- a/popup.html
+++ b/popup.html
@@ -10,15 +10,17 @@
     <div id="main_container">
       <div id="btn_container">
         <button id="start_timer_btn">
-          <span id="btn_text">
+          <span id="btn_text" class="text">
             START
           </span>
         </button>
       </div>
-      <div id="timer_container">
-        <span>00</span>
-        <span>:</span>
-        <span>00</span>
+      <div id="timer_container_wrapper" class="text">
+        <div id="timer_container">
+          <span>00</span>
+          <span>:</span>
+          <span>00</span>
+        </div>
       </div>
     </div>
     <script src="popup.js"></script>
