hour is shown in timer

--- a/popup.html
+++ b/popup.html
@@ -20,6 +20,8 @@
           <span>00</span>
           <span>:</span>
           <span>00</span>
+          <span>:</span>
+          <span>00</span>
         </div>
       </div>
     </div>
