--- a/newtab.html
+++ b/newtab.html
@@ -6,5 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <p>hello</p>
+    <script src="newtab.js"></script>
+  </body>
 </html>
