added design for top half of newtab.html

--- a/popup.html
+++ b/popup.html
@@ -17,14 +17,15 @@
       </div>
       <div id="timer_container_wrapper" class="text">
         <div id="timer_container">
-          <span>00</span>
+          <span id="hr_val">00</span>
           <span>:</span>
-          <span>00</span>
+          <span id="min_val">00</span>
           <span>:</span>
-          <span>00</span>
+          <span id="sec_val">00</span>
         </div>
       </div>
     </div>
-    <script src="popup.js"></script>
+    <script type="text/javascript" src="popup.js"></script>
+    <script type="text/javascript" src="shared.js"></script>
   </body>
 </html>
