--- a/newtab.html
+++ b/newtab.html
@@ -3,32 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="newtab.css" type="text/css" />
     <title>Document</title>
   </head>
   <body>
     <section id="setup">
       <div id="timer_container">
-        <span>00</span>
+        <span id="hr_val">00</span>
         <span>:</span>
-        <span>00</span>
+        <span id="min_val">00</span>
         <span>:</span>
-        <span>00</span>
+        <span id="sec_val">00</span>
       </div>
       <div>
         <button id="settings_btn">Settings</button>
       </div>
-      <div>
-        <button id="start_timer_btn">
-          <span id="btn_text" class="text">
-            START
-          </span>
-        </button>
-      </div>
       <div id="goal_setup">
-        <form>GOAL: <input type="text" name="daily_goal" /></form>
+        <form>
+          GOAL: <input type="text" name="daily_goal" autocomplete="off" />
+        </form>
       </div>
     </section>
     <section id="data_view"></section>
     <script src="newtab.js"></script>
+    <script src="shared.js"></script>
   </body>
 </html>
