asks for new goal value every day

--- a/newtab.html
+++ b/newtab.html
@@ -20,7 +20,13 @@
       </div>
       <div id="goal_setup">
         <form>
-          GOAL: <input type="text" name="daily_goal" autocomplete="off" />
+          GOAL:
+          <input
+            id="goal_input"
+            type="text"
+            name="daily_goal"
+            autocomplete="off"
+          />
         </form>
       </div>
     </section>
