remaining time is displayed on newtab

--- a/newtab.html
+++ b/newtab.html
@@ -9,11 +9,11 @@
   <body>
     <section id="setup">
       <div id="timer_container">
-        <span id="hr_val">00</span>
-        <span>:</span>
-        <span id="min_val">00</span>
-        <span>:</span>
-        <span id="sec_val">00</span>
+        Remaining:
+        <span id="hr_val_rem">00</span>
+        <span>h</span>
+        <span id="min_val_rem">00</span>
+        <span>m</span>
       </div>
       <div>
         <button id="settings_btn">Settings</button>
@@ -26,7 +26,7 @@
             type="text"
             name="daily_goal"
             autocomplete="off"
-          />
+          />h
         </form>
       </div>
     </section>
