basic options page created

--- a/newtab.html
+++ b/newtab.html
@@ -18,7 +18,9 @@
         <span>m</span>
       </div>
       <div>
-        <button id="settings_btn">Settings</button>
+        <button id="settings_btn">
+          <a href="/options.html">Settings</a>
+        </button>
       </div>
       <div id="goal_setup">
         <form>
