pomodoro settings work properly

--- a/newtab.html
+++ b/newtab.html
@@ -43,9 +43,17 @@
         <span id="pomodoro_option"
           >Pomodoro Mode: <span id="chosen_pomodoro_option"></span
         ></span>
-        Interval: <span id="pomodoro_value"></span> min
       </div>
-
+      <div id="interval">
+        Interval:
+        <input
+          id="pomodoro_value"
+          type="text"
+          name="pomodoro_value"
+          autocomplete="off"
+        />
+        min
+      </div>
       <div>
         <button>Clear Data</button>
       </div>
